   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - API changes
      - Removed deprecated classes and code.
      - The Route class has been reintroduced with a lighter
        behavior not depending on URI templates.
      - Added an UniformResource#setApplication() setter to be able
        to explicitly set the parent application used to pick up the
        ConverterService or MetadataService. This property is also 
        carried on by the copy constructor. Suggested by John Logdson.
      - Added UniformResource#toString() for easier debugging.
      - Added Representation#isSelectable() and getRegistration() method
        to manipulate the registration of the NIO channel with its 
        associated selector and received asynchronous notifications
        of available content.
    - Enhancements
      - Improved the naming of files created by the FILE local 
        connector so that media type extension comes at the end.
      - Added a new non-blocking NIO/HTTP connector in the engine, in
        addition of the internal one. It is not complete yet but has
        excellent performance so far. Chunked encoding and a few other
        features are missing though.
    - Bugs fixed
      - 
    - Misc
	